Override JVM opts to not include tiered compilation